Add test for condget requests.
* testenv/Test-condget.py: the test
* testenv/Makefile.am: add to tests list

--- a/testenv/Makefile.am
+++ b/testenv/Makefile.am
@@ -54,7 +54,8 @@ if HAVE_PYTHON3
     Test-504.py                                     \
     Test--spider-r.py                               \
     Test-redirect-crash.py                          \
-    Test-reserved-chars.py
+    Test-reserved-chars.py                          \
+    Test-condget.py
 
   # added test cases expected to fail here and under TESTS
   XFAIL_TESTS =
