Link libidn2+libunistring and libpthread only to wget2

--- a/libwget/Makefile.am
+++ b/libwget/Makefile.am
@@ -16,7 +16,7 @@ libwget_@LIBWGET_API_VERSION@_la_LDFLAGS = -version-info $(LIBWGET_SO_VERSION)
 noinst_PROGRAMS = test_linking
 test_linking_SOURCES = test_linking.c
 test_linking_CPPFLAGS = -I$(top_srcdir)/include
-test_linking_LDADD = libwget-@LIBWGET_API_VERSION@.la @LTLIBICONV@ @LTLIBINTL@ $(LIBS)
+test_linking_LDADD = libwget-@LIBWGET_API_VERSION@.la @LTLIBICONV@ @LTLIBINTL@ $(LIBIDN2) $(LIBUNISTRING) $(LIBPTHREAD)
 test_linking_LDFLAGS = -static
 
 css_tokenizer.c: $(srcdir)/css_tokenizer.lex css_tokenizer.h
