--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@
 /configure
 /lib/
 /maint.mk
+/config_check.cache
+/libtool
 # Wildcard Ignores
 *~
 po/*.gmo*
@@ -60,6 +62,7 @@ po/Makevars
 po/POTFILES
 po/wget.pot
 po/stamp-po
+po/remove-potcdate.sed
 # src/
 src/.deps/
 src/Makefile
@@ -75,6 +78,22 @@ src/stamp-h1
 src/tags
 src/version.c
 src/wget
+# src2
+src2/Makefile
+src2/Makefile.in
+src2/wget2
+src2/.deps/
+# libwget
+libwget/Makefile
+libwget/Makefile.in
+libwget/.deps/
+libwget/.libs/
+libwget/css_tokenizer.c
+libwget/libwget*.la
+libwget/test_linking
+# include
+include/Makefile
+include/Makefile.in
 # testenv/
 testenv/conf/__pycache__/
 testenv/exc/__pycache__/
