--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -41,7 +41,7 @@
 ../src/libunittest.a:
 	cd ../src && $(MAKE) $(AM_MAKEFLAGS) libunittest.a
 
-../lib/libgnu.a:
+../lib/libgnu.la:
 	cd ../lib && $(MAKE) $(AM_MAKEFLAGS)
 
 PX_TESTS = \
@@ -135,7 +135,7 @@ EXTRA_DIST = FTPServer.pm FTPTest.pm HTTPServer.pm HTTPTest.pm \
 
 check_PROGRAMS = unit-tests
 unit_tests_SOURCES =
-LDADD = ../src/libunittest.a ../lib/libgnu.a @LIBICONV@ @LIBINTL@ $(LIBS) $(LIB_CLOCK_GETTIME)
+LDADD = ../src/libunittest.a ../lib/libgnu.la @LIBICONV@ @LIBINTL@ $(LIBS) $(LIB_CLOCK_GETTIME)
 
 CLEANFILES = *~ *.bak core core.[0-9]*
 
